Added About Page and modified resource paths in multiple pages

--- a/template/template.html
+++ b/template/template.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<title>Book Flights | CanGo Airways</title>
 	<meta charset="UTF-8">
@@ -10,7 +11,8 @@
 	<link href='../css/index.css' rel='stylesheet'>
 	<link href='../css/navbar.css' rel='stylesheet'>
 	<style>
-		body, html {
+		body,
+		html {
 			height: 100%;
 			margin: 0;
 			font-family: 'Crimson Pro', serif;
@@ -27,15 +29,16 @@
 		}
 
 		hr {
-			width:80%;
-			margin:0 auto;
+			width: 80%;
+			margin: 0 auto;
 		}
-				
+
 		.core-color {
 			color: #f80040;
 		}
 	</style>
 </head>
+
 <body>
 
 	<!-- Use the header area for the website name or logo -->
@@ -47,8 +50,7 @@
 			<p>Travel safely with us</p>
 		</div>
 	</header>
-	<br>
-	
+
 	<!-- Use the nav area to add hyperlinks to other pages within the website -->
 	<nav class="nav-bar" id="nav-bar-id">
 		<a href="#home" class="active">Home</a>
@@ -60,15 +62,17 @@
 		</a>
 	</nav>
 	<br>
-	
+
 	<!-- Use the main area to add contents within the website -->
 	<main>
+		<br>
 		<picture>
-			<img class="home-promotion" src="../images/home-promotion.png" alt="Home Promotion" width="1080" height="520">
+			<img class="home-promotion" src="../images/home-promotion.png" alt="Home Promotion" width="1080"
+				height="520">
 		</picture>
 	</main>
 	<br>
-	
+
 	<!-- Use the footer area to add webpage footer content -->
 	<footer>
 		<hr>
@@ -77,13 +81,14 @@
 	</footer>
 	<script>
 		function myFunction() {
-		  var x = document.getElementById("nav-bar-id");
-		  if (x.className === "nav-bar") {
-			x.className += " responsive";
-		  } else {
-			x.className = "nav-bar";
-		  }
+			var x = document.getElementById("nav-bar-id");
+			if (x.className === "nav-bar") {
+				x.className += " responsive";
+			} else {
+				x.className = "nav-bar";
+			}
 		}
 	</script>
 </body>
+
 </html>
