--- a/css/homebanner.css
+++ b/css/homebanner.css
@@ -15,3 +15,16 @@
 	transform: translate(-50%, -50%);
 	color: #f2f2f2;
 }
+
+.home-promotion {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+@media screen and (max-width: 1160px) {
+	.home-promotion {
+		max-width: 100%;
+		height: auto;
+	}
+}
