Modified heading color in index and template html

--- a/template/template.html
+++ b/template/template.html
@@ -35,6 +35,18 @@
 
 		.core-color {
 			color: #f80040;
+			animation-name: change-head-color;
+			animation-duration: 3s;
+		}
+
+		@keyframes change-head-color {
+			from {
+				color: #f1f1f2;
+			}
+
+			to {
+				color: #f80040;
+			}
 		}
 	</style>
 </head>
