--- a/css/index.css
+++ b/css/index.css
@@ -44,3 +44,13 @@ input[type=submit]:hover {
 	margin-right: auto;
 	box-shadow: 0px 0px 2px black inset;
 }
+
+@keyframes change-head-color {
+	from {
+		color: #f1f1f2;
+	}
+
+	to {
+		color: #f80040;
+	}
+}
