--- a/css/index.css
+++ b/css/index.css
@@ -27,6 +27,7 @@ input[type=submit] {
 	border-radius: 4px;
 	cursor: pointer;
 	-webkit-transition: background-color 1s;
+	transition: background-color 1s;
 }
 
 input[type=submit]:hover {
