--- a/css/index.css
+++ b/css/index.css
@@ -44,6 +44,7 @@ input[type=submit]:hover {
 	margin-left: auto;
 	margin-right: auto;
 	box-shadow: 0px 0px 2px black inset;
+	max-width: 1050px;
 }
 
 @keyframes change-head-color {
