--- a/template/template.html
+++ b/template/template.html
@@ -19,6 +19,12 @@
 			background-color: #150941;
 		}
 
+		@media screen and (min-width: 2048px) {
+			body {
+				font-size: 24px;
+			}
+		}
+
 		footer {
 			left: 0;
 			bottom: 0;
