Added Flight Information Page

--- a/template/template.html
+++ b/template/template.html
@@ -25,6 +25,12 @@
 			}
 		}
 
+		@media screen and (max-width: 400px) {
+			h1 {
+				font-size: 35px;
+			}
+		}
+
 		footer {
 			left: 0;
 			bottom: 0;
