Added contact page and modified responsive design on index page

--- a/css/index.css
+++ b/css/index.css
@@ -7,7 +7,7 @@
 	margin-right: auto;
 }
 
-input[type=text], select, date {
+input[type=text], select, input[type=date],  textarea{
 	width: 100%;
 	padding: 12px 20px;
 	margin: 8px 0;
