--- a/css/contact.css
+++ b/css/contact.css
@@ -1,19 +1,46 @@
-.contact-form {
-	border-radius: 5px;
-	background-color: #f2f2f2;
-	padding: 20px;
-	width: 80%;
-	display: flex;
-	flex-wrap: wrap;
-	margin-left: auto;
-	margin-right: auto;
-	box-shadow: 0px 0px 2px black inset;
-	overflow: hidden;
+
+.select a {
+	color: black;
 }
 
-.contact-image {
-	width: 70%;
+.select a:hover{
+	color: #f80040;
+	text-decoration: none;
+}
+
+.search-form {
+	border-radius: 5px;
+	background-color: #f2f2f2;
+	padding: 30px;
+	width: 50%;
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
+	box-shadow: 0px 0px 2px black inset;
+	max-width: 1050px;
+}
+
+.icon  {
+	text-align: center
+}
+
+.icon  i{
+	font-size:36px;
+	color: white
+}
+
+.icon  a{
+	
+	color:#f80040;
+	text-decoration: none;
+}
+
+input[type=text]{
+	width: 100%;
+	padding: 12px 20px;
+	margin: 8px 0;
+	display: inline-block;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+	box-sizing: border-box;
 }
