--- a/css/offers.css
+++ b/css/offers.css
@@ -5,13 +5,19 @@
     width: 25%;
 }
 
-.row {
+.row-container {
     width: 100%;
     margin-left: auto;
     margin-right: auto;
     display: block;
     height: 200px;
     overflow-y: auto;
+}
+
+@media screen and (min-width: 1080px) {
+    .row-container {
+        height: 500px;
+    }
 }
 
 /* Style the images inside the grid */
@@ -69,8 +75,8 @@
 }
 
 @media screen and (max-width: 630px) {
-	#expandedImage {
-		width: 100%;
+    #expandedImage {
+        width: 100%;
         height: 100%;
-	}
+    }
 }
