--- a/template/template.html
+++ b/template/template.html
@@ -101,7 +101,7 @@
 		<a href="#offers">Explore Offers</a>
 		<a href="#contact">Contact Us</a>
 		<a href="#about">About Us</a>
-		<a href="javascript:void(0);" class="icon" onclick="myFunction()">
+		<a href="javascript:void(0);" class="icon" onclick="changeActiveNavigationBar()">
 			<i class="fa fa-bars"></i>
 		</a>
 	</nav>
@@ -124,7 +124,7 @@
 		<br>
 	</footer>
 	<script>
-		function myFunction() {
+		function changeActiveNavigationBar() {
 			var x = document.getElementById("nav-bar-id");
 			if (x.className === "nav-bar") {
 				x.className += " responsive";
