--- a/css/offers.css
+++ b/css/offers.css
@@ -10,7 +10,7 @@
     margin-left: auto;
     margin-right: auto;
     display: block;
-    height: 200px;
+    height: 300px;
     overflow-y: auto;
 }
 
@@ -79,4 +79,12 @@
         width: 100%;
         height: 100%;
     }
+
+    .column {
+        float: none;
+        text-align: center;
+        width: 100%;
+        margin-bottom: 5px;
+    }
+    
 }
