--- a/css/contact.css
+++ b/css/contact.css
@@ -1,3 +1,5 @@
+/* Style Sheet to define styles of components in Contact Us Page */
+
 .contact-form {
 	border-radius: 5px;
 	background-color: #f2f2f2;
