--- a/css/flight-info.css
+++ b/css/flight-info.css
@@ -1,3 +1,5 @@
+/* Style Sheet to define styles of components in Flight Information Page */
+
 .flex-container {
 	display: flex;
 	flex-direction: row;
