--- a/css/homebanner.css
+++ b/css/homebanner.css
@@ -1,3 +1,5 @@
+/* Style Sheet to define styles of Top Home Banner in all pages */
+
 .hero-image {
 	background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../images/banner.jpg);
 	height: 25%;
