--- a/css/offers.css
+++ b/css/offers.css
@@ -51,7 +51,7 @@
 #imgtext {
     color: #f80040;
     font-size: 24px;
-    padding: auto;
+    padding: 5px;
     text-align: center;
 }
 
@@ -79,12 +79,10 @@
         width: 100%;
         height: 100%;
     }
-
     .column {
         float: none;
         text-align: center;
         width: 100%;
         margin-bottom: 5px;
     }
-    
 }
